kubernetes/base/service_echo_server.yml
apiVersion: v1
kind: Service
metadata:
  name: echo-server
  labels:
    app.kubernetes.io/component: echo-server
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
  selector:
    app.kubernetes.io/component: echo-server
